evaluation/capybarakv_interface/src/bindings.rs

extern "C" {
    pub fn rocksdb_options_set_use_adaptive_mutex(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_bytes_per_sync(arg1: *mut rocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn rocksdb_options_set_wal_bytes_per_sync(arg1: *mut rocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn rocksdb_options_set_writable_file_max_buffer_size(
        arg1: *mut rocksdb_options_t,
        arg2: u64,
    );
}
extern "C" {
    pub fn rocksdb_options_set_allow_concurrent_memtable_write(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_enable_write_thread_adaptive_yield(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_max_sequential_skip_in_iterations(
        arg1: *mut rocksdb_options_t,
        arg2: u64,
    );
}
extern "C" {
    pub fn rocksdb_options_set_disable_auto_compactions(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_optimize_filters_for_hits(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_delete_obsolete_files_period_micros(
        arg1: *mut rocksdb_options_t,
        arg2: u64,
    );
}
extern "C" {
    pub fn rocksdb_options_prepare_for_bulk_load(arg1: *mut rocksdb_options_t);
}
extern "C" {
    pub fn rocksdb_options_set_memtable_vector_rep(arg1: *mut rocksdb_options_t);
}
extern "C" {
    pub fn rocksdb_options_set_memtable_prefix_bloom_size_ratio(
        arg1: *mut rocksdb_options_t,
        arg2: f64,
    );
}
extern "C" {
    pub fn rocksdb_options_set_max_compaction_bytes(arg1: *mut rocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn rocksdb_options_set_hash_skip_list_rep(
        arg1: *mut rocksdb_options_t,
        arg2: usize,
        arg3: i32,
        arg4: i32,
    );
}
extern "C" {
    pub fn rocksdb_options_set_hash_link_list_rep(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_set_plain_table_factory(
        arg1: *mut rocksdb_options_t,
        arg2: u32,
        arg3: ::std::os::raw::c_int,
        arg4: f64,
        arg5: usize,
    );
}
extern "C" {
    pub fn rocksdb_options_set_min_level_to_compress(
        opt: *mut rocksdb_options_t,
        level: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_memtable_huge_page_size(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_set_max_successive_merges(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_set_bloom_locality(arg1: *mut rocksdb_options_t, arg2: u32);
}
extern "C" {
    pub fn rocksdb_options_set_inplace_update_support(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_inplace_update_num_locks(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_set_report_bg_io_stats(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
pub const rocksdb_tolerate_corrupted_tail_records_recovery: _bindgen_ty_3 = 0;
pub const rocksdb_absolute_consistency_recovery: _bindgen_ty_3 = 1;
pub const rocksdb_point_in_time_recovery: _bindgen_ty_3 = 2;
pub const rocksdb_skip_any_corrupted_records_recovery: _bindgen_ty_3 = 3;
pub type _bindgen_ty_3 = ::std::os::raw::c_uint;
extern "C" {
    pub fn rocksdb_options_set_wal_recovery_mode(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
pub const rocksdb_no_compression: _bindgen_ty_4 = 0;
pub const rocksdb_snappy_compression: _bindgen_ty_4 = 1;
pub const rocksdb_zlib_compression: _bindgen_ty_4 = 2;
pub const rocksdb_bz2_compression: _bindgen_ty_4 = 3;
pub const rocksdb_lz4_compression: _bindgen_ty_4 = 4;
pub const rocksdb_lz4hc_compression: _bindgen_ty_4 = 5;
pub const rocksdb_xpress_compression: _bindgen_ty_4 = 6;
pub const rocksdb_zstd_compression: _bindgen_ty_4 = 7;
pub type _bindgen_ty_4 = ::std::os::raw::c_uint;
extern "C" {
    pub fn rocksdb_options_set_compression(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_bottommost_compression(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
pub const rocksdb_level_compaction: _bindgen_ty_5 = 0;
pub const rocksdb_universal_compaction: _bindgen_ty_5 = 1;
pub const rocksdb_fifo_compaction: _bindgen_ty_5 = 2;
pub type _bindgen_ty_5 = ::std::os::raw::c_uint;
extern "C" {
    pub fn rocksdb_options_set_compaction_style(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_universal_compaction_options(
        arg1: *mut rocksdb_options_t,
        arg2: *mut rocksdb_universal_compaction_options_t,
    );
}
extern "C" {
    pub fn rocksdb_options_set_fifo_compaction_options(
        opt: *mut rocksdb_options_t,
        fifo: *mut rocksdb_fifo_compaction_options_t,
    );
}
extern "C" {
    pub fn rocksdb_options_set_ratelimiter(
        opt: *mut rocksdb_options_t,
        limiter: *mut rocksdb_ratelimiter_t,
    );
}
extern "C" {
    pub fn rocksdb_options_set_atomic_flush(
        opt: *mut rocksdb_options_t,
        arg1: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_row_cache(opt: *mut rocksdb_options_t, cache: *mut rocksdb_cache_t);
}
extern "C" {
    pub fn rocksdb_ratelimiter_create(
        rate_bytes_per_sec: i64,
        refill_period_us: i64,
        fairness: i32,
    ) -> *mut rocksdb_ratelimiter_t;
}
extern "C" {
    pub fn rocksdb_ratelimiter_destroy(arg1: *mut rocksdb_ratelimiter_t);
}
pub const rocksdb_uninitialized: _bindgen_ty_6 = 0;
pub const rocksdb_disable: _bindgen_ty_6 = 1;
pub const rocksdb_enable_count: _bindgen_ty_6 = 2;
pub const rocksdb_enable_time_except_for_mutex: _bindgen_ty_6 = 3;
pub const rocksdb_enable_time: _bindgen_ty_6 = 4;
pub const rocksdb_out_of_bounds: _bindgen_ty_6 = 5;
pub type _bindgen_ty_6 = ::std::os::raw::c_uint;
pub const rocksdb_user_key_comparison_count: _bindgen_ty_7 = 0;
pub const rocksdb_block_cache_hit_count: _bindgen_ty_7 = 1;
pub const rocksdb_block_read_count: _bindgen_ty_7 = 2;
pub const rocksdb_block_read_byte: _bindgen_ty_7 = 3;
pub const rocksdb_block_read_time: _bindgen_ty_7 = 4;
pub const rocksdb_block_checksum_time: _bindgen_ty_7 = 5;
pub const rocksdb_block_decompress_time: _bindgen_ty_7 = 6;
pub const rocksdb_get_read_bytes: _bindgen_ty_7 = 7;
pub const rocksdb_multiget_read_bytes: _bindgen_ty_7 = 8;
pub const rocksdb_iter_read_bytes: _bindgen_ty_7 = 9;
pub const rocksdb_internal_key_skipped_count: _bindgen_ty_7 = 10;
pub const rocksdb_internal_delete_skipped_count: _bindgen_ty_7 = 11;
pub const rocksdb_internal_recent_skipped_count: _bindgen_ty_7 = 12;
pub const rocksdb_internal_merge_count: _bindgen_ty_7 = 13;
pub const rocksdb_get_snapshot_time: _bindgen_ty_7 = 14;
pub const rocksdb_get_from_memtable_time: _bindgen_ty_7 = 15;
pub const rocksdb_get_from_memtable_count: _bindgen_ty_7 = 16;
pub const rocksdb_get_post_process_time: _bindgen_ty_7 = 17;
pub const rocksdb_get_from_output_files_time: _bindgen_ty_7 = 18;
pub const rocksdb_seek_on_memtable_time: _bindgen_ty_7 = 19;
pub const rocksdb_seek_on_memtable_count: _bindgen_ty_7 = 20;
pub const rocksdb_next_on_memtable_count: _bindgen_ty_7 = 21;
pub const rocksdb_prev_on_memtable_count: _bindgen_ty_7 = 22;
pub const rocksdb_seek_child_seek_time: _bindgen_ty_7 = 23;
pub const rocksdb_seek_child_seek_count: _bindgen_ty_7 = 24;
pub const rocksdb_seek_min_heap_time: _bindgen_ty_7 = 25;
pub const rocksdb_seek_max_heap_time: _bindgen_ty_7 = 26;
pub const rocksdb_seek_internal_seek_time: _bindgen_ty_7 = 27;
pub const rocksdb_find_next_user_entry_time: _bindgen_ty_7 = 28;
pub const rocksdb_write_wal_time: _bindgen_ty_7 = 29;
pub const rocksdb_write_memtable_time: _bindgen_ty_7 = 30;
pub const rocksdb_write_delay_time: _bindgen_ty_7 = 31;
pub const rocksdb_write_pre_and_post_process_time: _bindgen_ty_7 = 32;
pub const rocksdb_db_mutex_lock_nanos: _bindgen_ty_7 = 33;
pub const rocksdb_db_condition_wait_nanos: _bindgen_ty_7 = 34;
pub const rocksdb_merge_operator_time_nanos: _bindgen_ty_7 = 35;
pub const rocksdb_read_index_block_nanos: _bindgen_ty_7 = 36;
pub const rocksdb_read_filter_block_nanos: _bindgen_ty_7 = 37;
pub const rocksdb_new_table_block_iter_nanos: _bindgen_ty_7 = 38;
pub const rocksdb_new_table_iterator_nanos: _bindgen_ty_7 = 39;
pub const rocksdb_block_seek_nanos: _bindgen_ty_7 = 40;
pub const rocksdb_find_table_nanos: _bindgen_ty_7 = 41;
pub const rocksdb_bloom_memtable_hit_count: _bindgen_ty_7 = 42;
pub const rocksdb_bloom_memtable_miss_count: _bindgen_ty_7 = 43;
pub const rocksdb_bloom_sst_hit_count: _bindgen_ty_7 = 44;
pub const rocksdb_bloom_sst_miss_count: _bindgen_ty_7 = 45;
pub const rocksdb_key_lock_wait_time: _bindgen_ty_7 = 46;
pub const rocksdb_key_lock_wait_count: _bindgen_ty_7 = 47;
pub const rocksdb_env_new_sequential_file_nanos: _bindgen_ty_7 = 48;
pub const rocksdb_env_new_random_access_file_nanos: _bindgen_ty_7 = 49;
pub const rocksdb_env_new_writable_file_nanos: _bindgen_ty_7 = 50;
pub const rocksdb_env_reuse_writable_file_nanos: _bindgen_ty_7 = 51;
pub const rocksdb_env_new_random_rw_file_nanos: _bindgen_ty_7 = 52;
pub const rocksdb_env_new_directory_nanos: _bindgen_ty_7 = 53;
pub const rocksdb_env_file_exists_nanos: _bindgen_ty_7 = 54;
pub const rocksdb_env_get_children_nanos: _bindgen_ty_7 = 55;
pub const rocksdb_env_get_children_file_attributes_nanos: _bindgen_ty_7 = 56;
pub const rocksdb_env_delete_file_nanos: _bindgen_ty_7 = 57;
pub const rocksdb_env_create_dir_nanos: _bindgen_ty_7 = 58;
pub const rocksdb_env_create_dir_if_missing_nanos: _bindgen_ty_7 = 59;
pub const rocksdb_env_delete_dir_nanos: _bindgen_ty_7 = 60;
pub const rocksdb_env_get_file_size_nanos: _bindgen_ty_7 = 61;
pub const rocksdb_env_get_file_modification_time_nanos: _bindgen_ty_7 = 62;
pub const rocksdb_env_rename_file_nanos: _bindgen_ty_7 = 63;
pub const rocksdb_env_link_file_nanos: _bindgen_ty_7 = 64;
pub const rocksdb_env_lock_file_nanos: _bindgen_ty_7 = 65;
pub const rocksdb_env_unlock_file_nanos: _bindgen_ty_7 = 66;
pub const rocksdb_env_new_logger_nanos: _bindgen_ty_7 = 67;
pub const rocksdb_total_metric_count: _bindgen_ty_7 = 68;
pub type _bindgen_ty_7 = ::std::os::raw::c_uint;
extern "C" {
    pub fn rocksdb_set_perf_level(arg1: ::std::os::raw::c_int);
}
extern "C" {
    pub fn rocksdb_perfcontext_create() -> *mut rocksdb_perfcontext_t;
}
extern "C" {
    pub fn rocksdb_perfcontext_reset(context: *mut rocksdb_perfcontext_t);
}
extern "C" {
    pub fn rocksdb_perfcontext_report(
        context: *mut rocksdb_perfcontext_t,
        exclude_zero_counters: ::std::os::raw::c_uchar,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_perfcontext_metric(
        context: *mut rocksdb_perfcontext_t,
        metric: ::std::os::raw::c_int,
    ) -> u64;
}
extern "C" {
    pub fn rocksdb_perfcontext_destroy(context: *mut rocksdb_perfcontext_t);
}
